--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,5 @@
 <h1>Task作成ページ</h1>
 
-<%= form_for(@task) do |f| %>
+<%= render 'form', task: @task %>
 
-  <%=f.label :content, 'タスク' %>
-  <%=f.text_field :content %>
-  
-  <%= f.submit '投稿' %>
-<% end %>
-<%=link_to 'タスク一覧に戻る', tasks_path %>
+<%=link_to 'Task一覧に戻る', tasks_path %>
