--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,13 +1,5 @@
-<h1>
-  <%= @task.id %>
-  の編集ページ
-</h1>
+<h1><%= @task.id %>の編集ページ</h1>
 
-<%= form_for(@task) do |f| %>
+<%= render 'form', task: @task %>
 
-  <%=f.label :content, 'タスク' %>
-  <%=f.text_field :content %>
-  
-  <%= f.submit '投稿' %>
-<% end %>
 <%=link_to 'タスク一覧に戻る', tasks_path %>
