--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
 <% @tasks.each do |task| %>
   <li>
   <%= link_to task.id, task %>
-  <%= task.content %>
+  <%= task.content %>&gt;<%= task.status %>
   </li>
 <% end %>
 
