--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,7 +4,7 @@
 </h1>
 
 <p>
-  <%= @task.content %>
+  <%= @task.content %>&gt;<%= @task.status %>
 </p>
 
 <%= link_to 'このタスクを編集する', edit_task_path(@task) %>
