--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,10 +12,13 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to  '新規タスクの投稿', new_task_path %></li>
-          <li><%= link_to 'Signup', signup_path %></li>
-          <li><%= link_to 'Log in', login_path %></li>
-          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+          <% if logged_in? %>
+            <li><%= link_to  '新規タスクの投稿', new_task_path %></li>
+            <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'Signup', signup_path %></li>
+            <li><%= link_to 'Log in', login_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
