--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,10 +2,11 @@
   <%= @task.id %>
   のTask詳細ページ
 </h1>
-
-<p>
-  <%= @task.content %>&gt;<%= @task.status %>
-</p>
-
+<div class="list-group">
+  	<%= link_to task_path(@task), class: "list-group-item" do %>
+		  <h4 class="list-group-item-heading"><%= @task.content %></h4>
+		  <p class="list-group-item-text">Status: <%= @task.status %></p>
+	  <% end %>
+</div>
 <%= link_to 'このタスクを編集する', edit_task_path(@task) %>
 <%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
