--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,10 +3,10 @@
   のTask詳細ページ
 </h1>
 <div class="list-group">
-  	<%= link_to task_path(@task), class: "list-group-item" do %>
+  	<div class="list-group-item">
 		  <h4 class="list-group-item-heading"><%= @task.content %></h4>
 		  <p class="list-group-item-text">Status: <%= @task.status %></p>
-	  <% end %>
+	  </div>
 </div>
-<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
